crates/analyzer/tests/snapshots/errors__call_undefined_function_on_external_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: No function `doesnt_exist` exists on contract `Foo`
  ┌─ compile_errors/call_undefined_function_on_external_contract.fe:7:21
  │
7 │     Foo(address(0)).doesnt_exist()
  │                     ^^^^^^^^^^^^ undefined function


